Nueva versión de la rama principal

--- a/practicaDPL.html
+++ b/practicaDPL.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <title>Práctica DPL</title>
 </head>
+
 <body>
     <h1>Francisco Puga Martínez</h1>
+
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae doloribus cum voluptas dolorem quaerat nisi,
+        voluptatem, ipsam facilis rerum rem eligendi. Magni hic reprehenderit cum quos obcaecati reiciendis, nisi
+        sunt.Odit tenetur, minus repellendus totam perspiciatis ipsum tempora libero cum fugiat veniam suscipit dolor
+        similique perferendis enim architecto, dolore harum atque ullam molestiae. Quia necessitatibus repellat
+        perferendis ex id aperiam.
+    </p>
 </body>
+
 </html>
